--- a/static/css/site.css
+++ b/static/css/site.css
@@ -1,8 +1,20 @@
 @import "modern-normalize.css";
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&display=swap');
+
 
 /****************** THEME & VARS ******************/
+/* full color scheme from https://colorpalettes.net/color-palette-4508/ */
 :root {
   --max_width: 90vw;
+  --color-primary: #4C5D8B;
+  --color-primary-light: #6E8BB3;
+  --color-primary-dark: #1B1F47;
+  --color-danger: #a51e1e;
+  --color-success: #138015;
+  --color-info: #0f8894;
+  --color-warning: #dc781a;
+  --color-background: #F9F7FA;
+  --font-family: 'Montserrat', sans-serif;
 }
 
 /* quick reset. See https://mattbrictson.com/blog/css-normalize-and-reset */
@@ -30,6 +42,16 @@ img {
 }
 /********* End reset *******/
 
+body {
+  background-color: var(--color-background);
+  color: #222;
+  font-family: var(--font-family);
+}
+
+a {color: var(--color-primary); }
+a:hover {color: var(--color-primary-dark); }
+
+
 [role=banner] {
   display: flex;
   align-items: center;
@@ -43,10 +65,13 @@ img {
 [role="banner"] h1 {
   font-size: 2em;
   font-weight: bold;
-  padding-right: 2em
+  padding-right: 2em;
+
+  a { text-decoration: none }
 }
 [role="banner"] h2 {
   margin-top: 0.25em;
+  font-size: 0.875em;
 }
 
 .job-list {
