Fixed issue #2 and other small fixes

--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -3,5 +3,6 @@
 {% block extra_title %}{{ flatpage.title }}{% endblock %}
 
 {% block content %}
+    <h1>{{ flatpage.title }}</h1>
     {{ flatpage.content }}
 {% endblock %}
