--- a/static/css/site.css
+++ b/static/css/site.css
@@ -71,6 +71,7 @@ a:hover {color: var(--color-primary-dark); }
 
   a { text-decoration: none }
 }
+
 [role="banner"] h2 {
   margin-top: 0.25em;
   font-size: 0.875em;
@@ -79,7 +80,6 @@ a:hover {color: var(--color-primary-dark); }
 [role="navigation"] {
   background-color: var(--color-primary); 
   margin-bottom: 1em;
-  
 }
 [role="navigation"] ul {
   max-width: var(--max_width);
@@ -93,6 +93,31 @@ a:hover {color: var(--color-primary-dark); }
   color: var(--color-background);
   text-decoration: none;
   font-size: 0.875em;
+}
+
+main {
+  max-width: var(--max_width);
+  margin: 0 auto;
+}
+
+footer {
+  background-color: var(--color-primary); 
+  margin-bottom: 1em;
+  margin-top: 3em
+}
+footer div {
+  max-width: var(--max_width);
+  margin: 0 auto;
+  font-size: 0.75em;
+  text-align:right;
+  color: var(--color-background)
+}
+/* Typography */
+p + * {margin-top: 1em}
+h1, h3 { 
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: var(--color-primary-light)
 }
 
 .job-list {
