Added analytica and mobomo, also changes for companies

--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,7 @@
               {% block logo %}{{ site.name }}{% endblock %}
             </a>
           </h1>
-          <h2>Compiling and aggregating civic tech jobs from <a href="http://digitalservicescoalition.org">Digital Services Coalition</a> and other modern civic tech firms.</h2>
+          <h2>Aggregating civic tech jobs from <a href="http://digitalservicescoalition.org">Digital Services Coalition</a> companies and other modern civic tech firms.</h2>
           {% block nav_tagline %}{% endblock %}
         {% endblock %}
     {% endblock %}
