--- a/templates/base.html
+++ b/templates/base.html
@@ -95,6 +95,8 @@
   {% block init_js %}{% endblock %}
   {% block site_js %}
     <script src="{% static 'js/site.js' %}"></script>
+    <script data-goatcounter="https://dscovery.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
   {% endblock %}
   {% block extra_js %}{% endblock %}
 </body>
