--- a/jobsearch/templates/jobsearch/job_list.html
+++ b/jobsearch/templates/jobsearch/job_list.html
@@ -3,8 +3,8 @@
 
 {% block content %}
 
-
-<h1>New {% if job_type %}{{ job_type.1 }}{% endif %} Jobs</h1>
+{% if highlighted %}
+<h1>Highlighted {% if job_type %}{{ job_type.1 }}{% endif %} Jobs</h1>
 <table class="job-list fresh-list">
     <thead>
         <tr>
@@ -15,7 +15,7 @@
         <th>Found</th>
         </tr>
     </thead>
-        {% for job in fresh_list|dictsortreversed:"pub_date"|slice:20 %}
+        {% for job in highlighted|dictsortreversed:"pub_date"|slice:10 %}
         <tr class="status-{{ job.status }}" id="job-{{ job.pk }}">
             <td>
                 <a href="{% url 'company_detail' job.new_company.slug %}">{{ job.new_company }}</a>
@@ -34,25 +34,14 @@
         </tr>
         {% endfor %}
 </table>
-
+{% endif %}
 
 <h1>All {{ job_type.1 }} Jobs</h1>
 {% if job_type %}
 <p>Note: Jobs are manually tagged. Mistakes will happen. Feel free to <a href="https://github.com/tBaxter/DSCovery/issues">log an issue</a> if you see one.</p>
 {% endif %}
     {% for company in companies %}
-    <table class="job-list">
-        <caption><a href="{{ company.get_absolute_url }}">{{ company }}</a></caption>
-        <thead>
-            <tr>
-            <th colspan="2">Job</th>
-            <th>Tagged</th>
-            <th>Location</th>
-            <th>Found</th>
-            </tr>
-        </thead>
         {% show_jobs company job_type.0 %}
-    </table>
     {% endfor %}
 {% endblock %}
 
