--- a/templates/base.html
+++ b/templates/base.html
@@ -58,6 +58,7 @@
         {% for page in flatpages %}
             <li><a href="{{ page.url }}">{{ page.title }}</a></li>
         {% endfor %}
+        <li><a href="{% url 'new_jobs' %}">New jobs</a></li>
     </ul>
   </nav>
   <div id="wrapper">
