--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     {{ site.name }} 
     {% block extra_title %}{% endblock %}
   </title>
-  <link rel="stylesheet" href="{% static 'css/site.css' %}">
+  <link rel="stylesheet" href="{% static 'css/site.css' %}?v=2">
   {% block site_styles %}{% endblock %}
   <meta name="description" content="{% block description %}{% endblock %}">
 
@@ -88,7 +88,7 @@
     {% endblock %}
     {% block footer %}
       <div>
-        <p class="copyright">&copy; {{ now.year }} {{ site.name }}</p>
+        <p class="copyright">&copy; {{ now.year }} {{ site.name }} | <a href="{% url 'job_feed' %}">RSS</a></p>
       </div>
     {% endblock %}
   </footer>
