DSCovery bug fixes

--- a/static/css/site.css
+++ b/static/css/site.css
@@ -13,7 +13,7 @@
   --color-success: #138015;
   --color-info: #0f8894;
   --color-warning: #dc781a;
-  --color-background: #fdfcfd;
+  --color-background: #fdfdfd;
   --font-family: 'Montserrat', sans-serif;
 }
 
