style improvements, fix for ashby importer

--- a/jobsearch/templates/includes/job_detail_row.html
+++ b/jobsearch/templates/includes/job_detail_row.html
@@ -14,7 +14,7 @@
         </form>
         {% endif %}
     </td>
-    <td>
+    <td class="job-link">
         <a href="{{ job.link }}">{{ job.title }}</a>
     </td>
     <td>{% if job.job_type %}
