--- a/jobsearch/templates/jobsearch/job_list.html
+++ b/jobsearch/templates/jobsearch/job_list.html
@@ -21,7 +21,7 @@
             <td>
                 <a href="{% url 'company_detail' job.new_company.slug %}">{{ job.new_company }}</a>
             </td>
-            <td>
+            <td class="job-link">
                 <a href="{{ job.link }}">{{ job.title }}</a>
             </td>
             <td>
